# Auto_Nav

./: CMakeLists.txt  README.md  package.xml
Autonomous_Navigation_Atmega_code/: Autonomous_Navigation_Atmega_code.ino  README.md
Autonomous_Navigation_Atmega_code/Includes/SRA128/: io128.h  pinDefsManualNew.h  sra128.h
PCB files for Atmega 128/Actuator_Control_Board/: Actuator_Control_Board.brd  Actuator_Control_board.sch  README.md
PCB files for Atmega 128/Atmega_128 Dev Board/: Atmega_128 Dev Board.brd  Atmega_128 Dev Board.sch  README.md
PCB files for Atmega 128/Atmega_128 IC Breakout Board/: README.md
Scripts/: motor_pwm_publisher.py  odometry.py  robot_teleop.py
config_params/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
launch/: auto_nav.launch  gmapping.launch  robot_configuration.launch  teleoperation.launch
maps/: WRO_Room_map.pgm  WRO_Room_map.yaml
