<?xml version="1.0"?>
<package format="2">
  <name>Auto_Nav</name>
  <version>0.0.0</version>
  <description>The Avitra Autonomous Navigation Package</description>

  <maintainer email="awadhutthube@gmail.com">Awadhut Thube</maintainer>
  <maintainer email="saurabh.gupta1002@gmail.com">Saurabh Gupta</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <url type="website">http://wiki.ros.org/avitra_2dnav</url>

  <author email="saurabh.gupta1002@gmail.com">Saurabh Gupta</author>
  <author email="awadhutthube@gmail.com">Awadhut Thube</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>move_base</build_depend>
  <build_depend>gmapping</build_depend>
  <build_depend>sweep_ros</build_depend>
  <build_depend>amcl</build_depend>
  <build_depend>map_server</build_depend>
  <build_depend>rosserial_python</build_depend>

  <build_export_depend>move_base</build_export_depend>
  <build_export_depend>gmapping</build_export_depend>
  <build_export_depend>sweep_ros</build_export_depend>
  <build_export_depend>amcl</build_export_depend>
  <build_export_depend>map_server</build_export_depend>
  <build_export_depend>rosserial_python</build_export_depend>

  <exec_depend>move_base</exec_depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>sweep_ros</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>rosserial_python</exec_depend>

</package>
